--- a/views/home.ejs
+++ b/views/home.ejs
@@ -494,7 +494,8 @@
         document.addEventListener("touchstart", function() {}, false); // https://stackoverflow.com/q/18047353/4468834
     </script>
     <script>
-      Swal
+      // COVID Annoucement
+      /* Swal
         .fire({
           imageUrl: 'https://storage.googleapis.com/simpic-web.appspot.com/public/announce1.jpg',
           imageAlt: 'Announcement 1'
@@ -504,7 +505,7 @@
           imageUrl: 'https://storage.googleapis.com/simpic-web.appspot.com/public/announce2.jpg',
           imageAlt: 'Announcement 2'
         });
-        });
+        }); */
     </script>
 
     <!-- float facebook like box start -->
